# shogi_usi_parser

./: Cargo.toml  Makefile  README-ja.md  README.md  cbindgen.toml  generate_header.sh
.github/workflows/: c-bindings.yml  rust.yml
c_tests/: Makefile  position_test.c
include/: shogi_usi_parser.h
shogi_usi_parser/: Cargo.toml  README-ja.md  README.md
shogi_usi_parser/src/: error.rs  hand.rs  lib.rs  mv.rs  piece.rs  position.rs  square.rs
shogi_usi_parser_c/: Cargo.toml  README.md
