[workspace]
members = [
    "shogi_usi_parser",
    "shogi_usi_parser_c",
]

[profile.dev]
panic = "abort"
debug = false

[profile.release]
opt-level = "z"
panic = "abort"
strip = "debuginfo" # "symbol" removes exported symbols, which renders the generated cdylib useless.

[profile.release-speed]
inherits = "release"
opt-level = 3

[patch.crates-io]
shogi_core = { git = "https://github.com/rust-shogi-crates/shogi_core", rev = "v0.1.0-6-g8a2f01d" }
