[package]
name = "shogi_usi_parser"
version = "0.1.0"
authors = ["Rust shogi crates developers"]
edition = "2021"
rust-version = "1.60"
description = "Conversion from strings in USI format"
documentation = "https://docs.rs/shogi_usi_parser"
readme = "README.md"
repository = "https://github.com/rust-shogi-crates/shogi_usi_parser/tree/main/shogi_usi_parser"
license = "MIT"
keywords = ["shogi", "engine"]
categories = ["games", "game-engines", "game-development", "no-std"]

[features]
default = ["std"]
alloc = ["shogi_core/alloc"]
std = ["alloc", "shogi_core/std"]

[lib]
crate-type = [
    "rlib",
]

[dependencies]
shogi_core = { version = "0.1.1", default-features = false }
