[package]
name = "shogi_usi_parser_c"
version = "0.1.0"
edition = "2021"
categories = ["no-std"]

[features]
default = ["std"]
alloc = ["shogi_usi_parser/alloc"]
std = ["shogi_usi_parser/std"]

[lib]
crate-type = [
    "cdylib",
]

[dependencies]
shogi_usi_parser = { path = "../shogi_usi_parser", default-features = false }
