[package]
name = "shogi_usi_parser_c"
version = "0.0.0-unpublished"
authors = ["Rust shogi crates developers"]
edition = "2021"
rust-version = "1.60"
description = "Conversion from strings in USI format"
documentation = "https://docs.rs/shogi_usi_parser"
readme = "README.md"
repository = "https://github.com/rust-shogi-crates/shogi_usi_parser/tree/main/shogi_usi_parser"
license = "MIT"
keywords = ["shogi", "engine"]
categories = ["games", "game-engines", "game-development", "no-std"]
publish = false

[features]
default = ["std"]
alloc = ["shogi_usi_parser/alloc"]
std = ["shogi_usi_parser/std"]

[lib]
crate-type = [
    "cdylib",
]

[dependencies]
shogi_usi_parser = { path = "../shogi_usi_parser", default-features = false }
